# roguelike

./: .gitignore  CMakeLists.txt
resources/: resource.qrc
src/: main.cpp  window.hpp
